association page + minor changes

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,2 +1,5 @@
 .c-blue{ color: #0C1BEB;}
 .bg-blue{ background-color: #0C1BEB;}
+.pr-2{padding-right: 8px;}
+.bottom-2{bottom:2%!important}
+.end-2{right:2%!important}
