--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,3 +3,12 @@
 .pr-2{padding-right: 8px;}
 .bottom-2{bottom:2%!important}
 .end-2{right:2%!important}
+
+button {
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+}
