--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,6 @@
 .c-blue{ color: #0C1BEB;}
 .bg-blue{ background-color: #0C1BEB;}
+.bg-gray{ background-color: #c4c4c4;}
 .pr-2{padding-right: 8px;}
 .bottom-2{bottom:2%!important}
 .end-2{right:2%!important}
