--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,6 +22,14 @@
     right: 2% !important
 }
 
+.bottom-3 {
+    bottom: 3% !important
+}
+
+.end-3 {
+    right: 3% !important
+}
+
 button {
     background-color: transparent;
     background-repeat: no-repeat;
