--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -23,7 +23,7 @@ body {
 .side-panel {
   height: 90%;
   width: 50%;
-  background: #00CC7A;
+  background: #005fcc;
   z-index: 1;
   position: absolute;
   top: 50%;
@@ -70,7 +70,7 @@ body {
 .main-panel .panel-header {
   width: 100%;
   height: 15%;
-  background: #00B86E;
+  background: #b8a000;
   display: flex;
   align-items: center;
 }
